--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header id="header" class="header fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="index.html" class="logo align-items-center">
         <img src="assets/img/CodeNeo-Horizontal.png" alt="">
       </a>
 
