--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/CodeNeo-Favicon.png" rel="icon">
-  <link href="assets/img/CodeNeo-Favicon.png" rel="apple-touch-icon">
+  <link href="assets/img/codene" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -42,8 +42,9 @@
   <header id="header" class="header fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo align-items-center">
-        <img src="assets/img/CodeNeo-Horizontal.png" alt="">
+      <a href="index.html" class="logo d-flex align-items-center">
+        <img src="assets/img/CodeNeo-Favicon.png" alt="">
+        <span>CodeNeo</span>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -72,7 +73,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Login</a></li>
+          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
