--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
         <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
           <div class="col-lg-5">
             <i class="ri-question-line"></i>
-            <h4>When will we get access to the course?</h4>
+            <h4>When can my child start the course I registered in?</h4>
           </div>
           <div class="col-lg-7">
             <p>
