--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </li>
           -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#signup.html">Sign Up</a></li>
+          <li><a class="getstarted scrollto" href="signup.html">Sign Up</a></li>
           <li><a class="getstarted scrollto" href="login.html">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
