--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </li>
           -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="signup.html">Sign Up</a></li>
+          <li><a class="getstarted scrollto" onclick="openSignUpForm()">Sign Up</a></li>
           <li><a class="getstarted scrollto" onclick="openLoginForm()">Login</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -79,7 +79,32 @@
     </div>
   </header><!-- End Header -->
 
-  <!-- ======= Login Section ======= -->
+<!-- ======= Signup  ======= -->
+<div class="popup-overlay"></div>
+<div class="popup">
+  <div class="popup-close" onclick="closeSignUpForm()">x</div>
+  <div class="form">
+    <div class="avatar">
+      <img src="assets/img/CodeNeo.png" alt="">
+    </div>
+    <div class="header">
+      Signup now!
+    </div>
+    <div class="element">
+      <label for="username">Email Address</label>
+      <input type="text" id="username">
+    </div>
+    <div class="element">
+      <label for="password">Create Password</label>
+      <input type="password" id="password">
+    </div>
+    <div class="element">
+      <button>Create Account</button>
+    </div>
+  </div>
+</div>
+
+  <!-- ======= Login  ======= -->
 <div class="popup-overlay"></div>
 <div class="popup">
   <div class="popup-close" onclick="closeLoginForm()">×</div>
@@ -987,6 +1012,38 @@
 
   <!-- <a href="#header" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
 
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyDzDFElMS2JhVI81W0v4uG6FNKdGcXXOVs",
+    authDomain: "codeneo-lo.firebaseapp.com",
+    projectId: "codeneo-lo",
+    storageBucket: "codeneo-lo.appspot.com",
+    messagingSenderId: "836954381687",
+    appId: "1:836954381687:web:ed4c443f161f693a53d572",
+    measurementId: "G-P0WJ20X7SN"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+
+  db.settings({ timestamsInSnapShots: true});
+
+  firebase.analytics();
+</script>
+
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -1006,6 +1063,13 @@ function openLoginForm(){
 }
 function closeLoginForm(){
   document.body.classList.remove("showLoginForm");
+}
+
+function openSignUpForm(){
+  document.body.classList.add("showSignUpForm");
+}
+function closeSignUpForm(){
+  document.body.classList.remove("showSignUpForm");
 }
 
 
