--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
     </div>
     <div class="element2">
       <label for="addEmail">Email Address</label>
-      <input type="text" id="addEmail">
+      <input type="text" id="addEmail" required>
     </div>
     <div class="element2">
       <label for="createPassword">Create Password</label>
-      <input type="password" id="createPassword">
+      <input type="password" id="createPassword" required>
     </div>
     <div class="element2">
       <button>Create Account</button>
@@ -117,11 +117,11 @@
     </div>
     <div class="element">
       <label for="username">Email Address</label>
-      <input type="text" id="username">
+      <input type="text" id="username" required>
     </div>
     <div class="element">
       <label for="password">Password</label>
-      <input type="password" id="password">
+      <input type="password" id="password" required>
     </div>
     <div class="element">
       <button>Login</button>
