--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <!--
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -80,7 +80,7 @@
   </header><!-- End Header -->
 
 <!-- ======= Signup  ======= -->
-<div class="popup-overlay2"></div>
+<div class="popup-overlay2 modal" id="signupForm"></div>
 <div class="popup2">
   <div class="popup-close2" onclick="closeSignupForm()">x</div>
   <div class="form2">
@@ -91,12 +91,12 @@
       Hello Future Coder!
     </div>
     <div class="element2">
-      <label for="addEmail">Email Address</label>
-      <input type="text" id="addEmail" required>
+      <label for="signupEmail">Email Address</label>
+      <input type="email" id="signupEmail" required>
     </div>
     <div class="element2">
-      <label for="createPassword">Create Password</label>
-      <input type="password" id="createPassword" required>
+      <label for="signupPassword">Create Password</label>
+      <input type="password" id="signupPassword" required>
     </div>
     <div class="element2">
       <button>Create Account</button>
@@ -105,7 +105,7 @@
 </div>
 
   <!-- ======= Login  ======= -->
-<div class="popup-overlay"></div>
+<div class="popup-overlay modal" id="loginForm"></div>
 <div class="popup">
   <div class="popup-close" onclick="closeLoginForm()">×</div>
   <div class="form">
@@ -1038,7 +1038,7 @@
   const auth = firebase.auth();
   const db = firebase.firestore();
 
-  db.settings({ timestamsInSnapShots: true});
+  db.settings({ merge: true});
 
   firebase.analytics();
 </script>
