updated signup and login modals

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
   </header><!-- End Header -->
 
 <!-- ======= Signup  ======= -->
-<div class="popup-overlay2 modal" id="signupForm"></div>
+<form class="modal" id="signupForm">
+<div class="popup-overlay2"></div>
 <div class="popup2">
   <div class="popup-close2" onclick="closeSignupForm()">x</div>
   <div class="form2">
@@ -99,13 +100,15 @@
       <input type="password" id="signupPassword" required>
     </div>
     <div class="element2">
-      <button>Create Account</button>
+      <button type="submit">Create Account</button>
     </div>
   </div>
 </div>
+</form>
 
   <!-- ======= Login  ======= -->
-<div class="popup-overlay modal" id="loginForm"></div>
+<form class="modal" id="loginForm">
+<div class="popup-overlay"></div>
 <div class="popup">
   <div class="popup-close" onclick="closeLoginForm()">×</div>
   <div class="form">
@@ -128,7 +131,7 @@
     </div>
   </div>
 </div>
-
+</form>
 
 
   <!-- ======= Hero Section ======= -->
