--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
   </header><!-- End Header -->
 
 <!-- ======= Signup  ======= -->
-<form class="modal" id="signupForm">
-<div class="popup-overlay2"></div>
+
+<div class="popup-overlay2 modal">
 <div class="popup2">
   <div class="popup-close2" onclick="closeSignupForm()">x</div>
   <div class="form2">
@@ -91,6 +91,7 @@
     <div class="header2">
       Hello Future Coder!
     </div>
+    <form id="signupForm">
     <div class="element2">
       <label for="signupEmail">Email Address</label>
       <input type="email" id="signupEmail" required>
@@ -102,13 +103,13 @@
     <div class="element2">
       <button type="submit">Create Account</button>
     </div>
+  </form>
   </div>
 </div>
-</form>
+
 
   <!-- ======= Login  ======= -->
-<form class="modal" id="loginForm">
-<div class="popup-overlay"></div>
+<div class="popup-overlay modal"></div>
 <div class="popup">
   <div class="popup-close" onclick="closeLoginForm()">×</div>
   <div class="form">
@@ -118,6 +119,7 @@
     <div class="header">
       Welcome Back Coder!
     </div>
+    <form id="loginForm">
     <div class="element">
       <label for="username">Email Address</label>
       <input type="text" id="username" required>
@@ -129,9 +131,10 @@
     <div class="element">
       <button>Login</button>
     </div>
+    </form>
   </div>
 </div>
-</form>
+
 
 
   <!-- ======= Hero Section ======= -->
