--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
       </div>
       <form id="signupForm">
       <div class="element2">
-        <label for="signup-email">Email Address</label>
-        <input type="email" id="signup-email" required>
+        <label for="signup-username">Email Address</label>
+        <input type="text" id="signup-username" required>
       </div>
       <div class="element2">
-        <label for="signup-password">Create Password</label>
+        <label for="signup-password">Password</label>
         <input type="password" id="signup-password" required>
       </div>
       <div class="element2">
